--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -501,17 +501,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\atusi\\AppData\\Local\\Temp\\ipykernel_19272\\1193589172.py:113: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  koubai_list = np.array(koubai_list)\n",
-      "C:\\Users\\atusi\\AppData\\Local\\Temp\\ipykernel_19272\\1193589172.py:150: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  Network -= koubai_list * learning_rate #パラメータを更新\n"
+      "C:\\Users\\atusi\\AppData\\Local\\Temp\\ipykernel_3756\\1733197875.py:122: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  koubai_list = np.array(koubai_list)\n"
      ]
     },
     {
@@ -519,67 +517,92 @@
      "output_type": "stream",
      "text": [
       "firstnetwork\n",
-      "[array([[0.1, 0.3, 0.5, 0.6, 0.7, 0.1, 0.2, 0.3],\n",
-      "       [0.2, 0.4, 0.6, 0.1, 0.3, 0.5, 0.6, 0.2],\n",
-      "       [0.3, 0.1, 0.2, 0.4, 0.2, 0.5, 0.1, 0.4]]),\n",
-      " array([[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8]]),\n",
-      " array([[0.1, 0.4, 0.5, 0.6, 0.7],\n",
-      "       [0.2, 0.5, 0.1, 0.8, 0.1],\n",
-      "       [0.3, 0.6, 0.2, 0.5, 0.2],\n",
-      "       [0.2, 0.5, 0.4, 0.2, 0.3],\n",
-      "       [0.3, 0.6, 0.7, 0.3, 0.2],\n",
-      "       [0.2, 0.5, 0.3, 0.2, 0.5],\n",
-      "       [0.3, 0.6, 0.1, 0.1, 0.1],\n",
-      "       [0.2, 0.5, 0.1, 0.1, 0.2]]),\n",
-      " array([[0.1, 0.2, 0.2, 0.4, 0.4]]),\n",
-      " array([[0.1, 0.3, 0.3, 0.3, 0.2, 0.1, 0.5, 0.1],\n",
-      "       [0.2, 0.2, 0.1, 0.2, 0.1, 0.4, 0.2, 0.4],\n",
-      "       [0.6, 0.6, 0.5, 0.5, 0.5, 0.5, 0.3, 0.7],\n",
-      "       [0.3, 0.4, 0.3, 0.4, 0.7, 0.3, 0.4, 0.7],\n",
-      "       [0.1, 0.1, 0.7, 0.1, 0.3, 0.2, 0.1, 0.2]]),\n",
-      " array([[0.3, 0.2, 0.2, 0.3, 0.7, 0.2, 0.1, 0.3]])]\n",
+      "[array([[0.00799036, 0.00453921, 0.00341678, 0.00170127, 0.00254634,\n",
+      "        0.00141982, 0.00261657, 0.00163408],\n",
+      "       [0.00902119, 0.00509929, 0.00418483, 0.00739426, 0.00543911,\n",
+      "        0.00272091, 0.00017467, 0.00507561],\n",
+      "       [0.00313419, 0.00914139, 0.00197424, 0.00920458, 0.00547446,\n",
+      "        0.00295546, 0.00647579, 0.00522669]]),\n",
+      " array([[0.00410862, 0.0003382 , 0.0097739 , 0.00648914, 0.00903936,\n",
+      "        0.00320203, 0.00980392, 0.00065487]]),\n",
+      " array([[4.65839381e-04, 1.93139377e-04, 5.56520349e-03, 1.74615945e-03,\n",
+      "        5.46230497e-04],\n",
+      "       [4.71529994e-03, 7.63595279e-03, 5.55569652e-03, 8.73855038e-03,\n",
+      "        7.32493512e-04],\n",
+      "       [4.61891059e-03, 7.48964230e-03, 4.88878401e-03, 7.04188084e-03,\n",
+      "        5.62478730e-03],\n",
+      "       [9.43795665e-05, 8.83435165e-03, 5.85794614e-03, 4.20888990e-03,\n",
+      "        9.51594935e-04],\n",
+      "       [4.56095483e-03, 8.92083527e-03, 1.39158652e-03, 5.94305025e-03,\n",
+      "        1.38068864e-03],\n",
+      "       [1.01490946e-03, 6.57150378e-03, 9.27850630e-03, 2.97536617e-03,\n",
+      "        5.13791646e-04],\n",
+      "       [9.96396852e-03, 1.03083897e-03, 5.93569795e-03, 8.81257200e-03,\n",
+      "        4.54106540e-03],\n",
+      "       [1.23363017e-03, 3.83166244e-03, 6.30945265e-03, 6.63725381e-03,\n",
+      "        4.27530905e-03]]),\n",
+      " array([[0.00261819, 0.00829021, 0.00326502, 0.00675518, 0.00265219]]),\n",
+      " array([[0.00134984, 0.00374279, 0.00894482, 0.00434437, 0.00072049,\n",
+      "        0.00439013, 0.00490383, 0.00987938],\n",
+      "       [0.00728467, 0.00694367, 0.00765557, 0.00607741, 0.00352791,\n",
+      "        0.00928292, 0.00672845, 0.00896822],\n",
+      "       [0.00344297, 0.00023056, 0.00059559, 0.00272733, 0.0028485 ,\n",
+      "        0.00520551, 0.0086271 , 0.00446147],\n",
+      "       [0.00219455, 0.00039752, 0.00239511, 0.00012931, 0.00712024,\n",
+      "        0.00201211, 0.00022429, 0.00257953],\n",
+      "       [0.00333003, 0.00687436, 0.00271057, 0.00367734, 0.00732391,\n",
+      "        0.00704446, 0.00769705, 0.00905921]]),\n",
+      " array([[1.15868331e-03, 9.62403932e-03, 6.96267500e-03, 9.32746697e-05,\n",
+      "        1.59476525e-03, 3.71051490e-03, 7.53010402e-03, 5.39598058e-03]])]\n",
       "------endnetwork-------\n",
-      "array([array([[0.15010981, 0.25820015, 0.47709152, 0.58405796, 0.63462471,\n",
-      "               0.11881873, 0.16601922, 0.28196878],\n",
-      "              [0.24328004, 0.33764813, 0.55303859, 0.09748593, 0.30385414,\n",
-      "               0.50591165, 0.55136736, 0.16319087],\n",
-      "              [0.17745904, 0.23770131, 0.23881783, 0.35621769, 0.19585389,\n",
-      "               0.40071937, 0.10551598, 0.39070348]])                      ,\n",
-      "       array([[0.03987225, 0.15370047, 0.28708732, 0.40095986, 0.49992498,\n",
-      "               0.5976523 , 0.73223059, 0.82041775]])                      ,\n",
-      "       array([[0.08786413, 0.39405476, 0.50665614, 0.62596985, 0.64998205],\n",
-      "              [0.18164821, 0.47060334, 0.10266599, 0.79406843, 0.11971641],\n",
-      "              [0.27318829, 0.54848073, 0.19831475, 0.47906768, 0.25817494],\n",
-      "              [0.24141148, 0.476661  , 0.34090534, 0.21683217, 0.27929468],\n",
-      "              [0.32305079, 0.55376612, 0.65039621, 0.26286378, 0.27858982],\n",
-      "              [0.18040284, 0.5175907 , 0.32621932, 0.20520588, 0.36956148],\n",
-      "              [0.27483649, 0.5930254 , 0.12339777, 0.02397345, 0.12267403],\n",
-      "              [0.23484245, 0.52244557, 0.07360648, 0.08470824, 0.10000651]]),\n",
-      "       array([[0.14399803, 0.24867937, 0.18411406, 0.30537957, 0.37176886]]),\n",
-      "       array([[ 0.11408503,  0.27861798,  0.30580636,  0.28746885,  0.14965455,\n",
-      "                0.08869092,  0.50193692,  0.00329999],\n",
-      "              [ 0.20478158,  0.13615183, -0.00980977,  0.14585378, -0.03874569,\n",
-      "                0.29610307,  0.14064947,  0.13923557],\n",
-      "              [ 0.57076488,  0.5282675 ,  0.47263868,  0.48690256,  0.50427231,\n",
-      "                0.49158982,  0.35437965,  0.5612977 ],\n",
-      "              [ 0.34371364,  0.37228417,  0.2920866 ,  0.39469856,  0.69992191,\n",
-      "                0.26434227,  0.34669879,  0.54203153],\n",
-      "              [ 0.13077374,  0.13025538,  0.55838012,  0.12181778,  0.21139991,\n",
-      "                0.16160513,  0.14800417,  0.12385257]])                        ,\n",
-      "       array([[0.27930384, 0.2769892 , 0.21505506, 0.27893625, 0.38137434,\n",
-      "               0.24120887, 0.23552354, 0.34785466]])                      ],\n",
-      "      dtype=object)\n",
+      "[array([[0.00799037, 0.00453916, 0.00341667, 0.00170124, 0.00254624,\n",
+      "        0.00141979, 0.00261644, 0.00163406],\n",
+      "       [0.0090212 , 0.00509924, 0.00418472, 0.00739424, 0.00543902,\n",
+      "        0.00272089, 0.00017454, 0.00507559],\n",
+      "       [0.0031342 , 0.00914133, 0.00197413, 0.00920456, 0.00547437,\n",
+      "        0.00295543, 0.00647565, 0.00522667]]),\n",
+      " array([[0.00410864, 0.00033811, 0.00977368, 0.0064891 , 0.00903917,\n",
+      "        0.00320198, 0.00980365, 0.00065484]]),\n",
+      " array([[4.65341220e-04, 1.92949802e-04, 5.56524483e-03, 1.74643116e-03,\n",
+      "        5.45964270e-04],\n",
+      "       [4.71495547e-03, 7.63582144e-03, 5.55572358e-03, 8.73873705e-03,\n",
+      "        7.32309018e-04],\n",
+      "       [4.61839524e-03, 7.48944652e-03, 4.88882916e-03, 7.04216334e-03,\n",
+      "        5.62451270e-03],\n",
+      "       [9.38263071e-05, 8.83414110e-03, 5.85799223e-03, 4.20919157e-03,\n",
+      "        9.51299442e-04],\n",
+      "       [4.56039647e-03, 8.92062301e-03, 1.39163446e-03, 5.94335568e-03,\n",
+      "        1.38039086e-03],\n",
+      "       [1.01467060e-03, 6.57141291e-03, 9.27852646e-03, 2.97549661e-03,\n",
+      "        5.13664178e-04],\n",
+      "       [9.96345329e-03, 1.03064323e-03, 5.93574291e-03, 8.81285410e-03,\n",
+      "        4.54079092e-03],\n",
+      "       [1.23339704e-03, 3.83157360e-03, 6.30947106e-03, 6.63738029e-03,\n",
+      "        4.27518420e-03]]),\n",
+      " array([[0.00258233, 0.00827663, 0.0032681 , 0.00677465, 0.00263313]]),\n",
+      " array([[0.00135974, 0.00372776, 0.00893756, 0.00435746, 0.00072907,\n",
+      "        0.00439237, 0.00489487, 0.00987659],\n",
+      "       [0.00731412, 0.00689853, 0.00763368, 0.00611642, 0.00355341,\n",
+      "        0.00928946, 0.00670146, 0.0089597 ],\n",
+      "       [0.00345561, 0.00021136, 0.0005863 , 0.00274406, 0.00285945,\n",
+      "        0.00520836, 0.00861564, 0.00445789],\n",
+      "       [0.00221901, 0.00036011, 0.00237698, 0.00016171, 0.00714144,\n",
+      "        0.00201757, 0.00020194, 0.0025725 ],\n",
+      "       [0.00333967, 0.00685973, 0.0027035 , 0.00369009, 0.00733226,\n",
+      "        0.00704665, 0.00768833, 0.0090565 ]]),\n",
+      " array([[0.00124214, 0.00125465, 0.00122859, 0.00126068, 0.00123189,\n",
+      "        0.00120009, 0.00122008, 0.00117995]])]\n",
       "[[0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
       " [0]\n",
-      " [0]\n",
-      " [1]]\n",
-      "[1 1 1]\n",
-      "[[0.12497956 0.12496382 0.12502937 0.1249825  0.1250021  0.12503196\n",
-      "  0.1250087  0.12500199]]\n"
+      " [1]\n",
+      " [0]]\n",
+      "[1 1 0]\n",
+      "[[0.12499999 0.12499997 0.12499998 0.12499997 0.125      0.12500003\n",
+      "  0.12500003 0.12500003]]\n"
      ]
     }
    ],
@@ -590,7 +613,7 @@
     "\n",
     "#ニューラルネットワークを作る関数\n",
     "def set_network(w1,b1,w2,b2,w3,b3):\n",
-    "    network = [w1,b1,w2,b2,w3,b3]\n",
+    "    network = [w1,b1,w2,b2,w3,b3] #list\n",
     "    return network\n",
     "\n",
     "def sigmoid(x):\n",
@@ -662,7 +685,10 @@
     "w1 = np.array([[0.1, 0.3, 0.5, 0.6, 0.7, 0.1, 0.2, 0.3], \n",
     "               [0.2, 0.4, 0.6, 0.1, 0.3, 0.5, 0.6, 0.2], \n",
     "               [0.3, 0.1, 0.2, 0.4, 0.2, 0.5, 0.1, 0.4]]) #3つのニューロンから、8つのニューロンに出力する際の重み\n",
+    "w1 = np.random.random([3,8])*0.01\n",
+    "\n",
     "b1 = np.array([[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8,]]) #バイアスを8つのニューロンにたす\n",
+    "b1 = np.random.random([1,8])*0.01\n",
     "\n",
     "w2 = np.array([[0.1, 0.4, 0.5, 0.6, 0.7],\n",
     "               [0.2, 0.5, 0.1, 0.8, 0.1],\n",
@@ -672,21 +698,27 @@
     "               [0.2, 0.5, 0.3, 0.2, 0.5],\n",
     "               [0.3, 0.6, 0.1, 0.1, 0.1],\n",
     "               [0.2, 0.5, 0.1, 0.1, 0.2]]) #8つのニューロンから5つのニューロンに出力する際の重み\n",
+    "w2 = np.random.random([8,5])*0.01\n",
+    "\n",
     "b2 = np.array([[0.1, 0.2, 0.2, 0.4, 0.4]])#5つのニューロンにたすバイアス\n",
+    "b2 = np.random.random([1,5])*0.01\n",
     "\n",
     "w3 = np.array([[0.1, 0.3, 0.3, 0.3, 0.2, 0.1, 0.5, 0.1],\n",
     "               [0.2, 0.2, 0.1, 0.2, 0.1, 0.4, 0.2, 0.4],\n",
     "               [0.6, 0.6, 0.5, 0.5, 0.5, 0.5, 0.3, 0.7],\n",
     "               [0.3, 0.4, 0.3, 0.4, 0.7, 0.3, 0.4, 0.7],\n",
     "               [0.1, 0.1, 0.7, 0.1, 0.3, 0.2, 0.1, 0.2]]) #5つのニューロンから8つのニューロンに出力する際の重み\n",
+    "w3 = np.random.random([5,8])*0.01\n",
+    "\n",
     "b3 = np.array([[0.3, 0.2, 0.2, 0.3, 0.7, 0.2, 0.1, 0.3]]) #バイアスを8つのニューロンにたす\n",
+    "b3 = np.random.random([1,8])*0.01\n",
     "\n",
     "#微小量hを定義\n",
     "h = 1e-4#0.0001\n",
     "#学習率を定義\n",
     "learning_rate = 0.1\n",
     "#学習回数を定義\n",
-    "learn = 20000\n",
+    "learn = 12000\n",
     "\n",
     "\n",
     "Network = set_network(w1,b1,w2,b2,w3,b3)#初期ネットワーク作成\n",
@@ -710,6 +742,7 @@
     "\n",
     "                # Network1 = Network #コピーを作る\n",
     "                Network1 = Network.copy()\n",
+    "                # print(Network1[param][gyou][retsu])\n",
     "                Network1[param][gyou][retsu] += h #あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（リストw1の一つの要素だけに+hしてから、set_networkで作る？そんなきがする）\n",
     "                # pprint.pprint(Network1)\n",
     "                out_y1 = forward(Network1,in_x)#そのNetworkで順伝播して出力を得る\n",
@@ -733,7 +766,10 @@
     "                koubai_list[param][gyou][retsu] = koubai #勾配情報をリストに保存する　これを繰り返すと、各パラメータの勾配のリストが完成する\n",
     "\n",
     "\n",
-    "    Network -= koubai_list * learning_rate #パラメータを更新\n",
+    "    # Network -= koubai_list * learning_rate #パラメータを更新\n",
+    "    for param in range(len(Network)):\n",
+    "        Network[param] -= koubai_list[param] * learning_rate\n",
+    "\n",
     "    # print(\"success\")\n",
     "\n",
     "A = forward(Network,in_x)\n",
@@ -759,6 +795,144 @@
     "\n",
     "    # 更新後のパラメータで新たなNetworkを作成する\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[0.1, 0.3, 0.5, 0.6, 0.7, 0.1, 0.2, 0.3],\n",
+      "       [0.2, 0.4, 0.6, 0.1, 0.3, 0.5, 0.6, 0.2],\n",
+      "       [0.3, 0.1, 0.2, 0.4, 0.2, 0.5, 0.1, 0.4]]),\n",
+      " array([[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8]]),\n",
+      " array([[0.1, 0.4, 0.5, 0.6, 0.7],\n",
+      "       [0.2, 0.5, 0.1, 0.8, 0.1],\n",
+      "       [0.3, 0.6, 0.2, 0.5, 0.2],\n",
+      "       [0.2, 0.5, 0.4, 0.2, 0.3],\n",
+      "       [0.3, 0.6, 0.7, 0.3, 0.2],\n",
+      "       [0.2, 0.5, 0.3, 0.2, 0.5],\n",
+      "       [0.3, 0.6, 0.1, 0.1, 0.1],\n",
+      "       [0.2, 0.5, 0.1, 0.1, 0.2]]),\n",
+      " array([[0.1, 0.2, 0.2, 0.4, 0.4]]),\n",
+      " array([[0.1, 0.3, 0.3, 0.3, 0.2, 0.1, 0.5, 0.1],\n",
+      "       [0.2, 0.2, 0.1, 0.2, 0.1, 0.4, 0.2, 0.4],\n",
+      "       [0.6, 0.6, 0.5, 0.5, 0.5, 0.5, 0.3, 0.7],\n",
+      "       [0.3, 0.4, 0.3, 0.4, 0.7, 0.3, 0.4, 0.7],\n",
+      "       [0.1, 0.1, 0.7, 0.1, 0.3, 0.2, 0.1, 0.2]]),\n",
+      " array([[0.3, 0.2, 0.2, 0.3, 0.7, 0.2, 0.1, 0.3]])]\n",
+      "--------------------------------------------------\n",
+      "[array([[0.9533489 , 0.7196298 , 0.46464161, 0.15467105, 0.08737698,\n",
+      "        0.83780278, 0.73027956, 0.29535714],\n",
+      "       [0.62997441, 0.06871418, 0.43041151, 0.21154527, 0.95938331,\n",
+      "        0.66193754, 0.64593077, 0.57595202],\n",
+      "       [0.32287603, 0.15325237, 0.9102094 , 0.09079559, 0.2810031 ,\n",
+      "        0.30039277, 0.80600136, 0.61736347]]),\n",
+      " array([[0.53529834, 0.52346841, 0.01084018, 0.89606032, 0.61876323,\n",
+      "        0.75219684, 0.77697505, 0.39489622]]),\n",
+      " array([[2.66454825e-01, 8.62178831e-01, 7.66227389e-01, 9.91336268e-01,\n",
+      "        2.10311294e-02],\n",
+      "       [5.00913741e-02, 9.46494338e-02, 5.92666468e-02, 4.92707476e-01,\n",
+      "        4.38442292e-01],\n",
+      "       [2.55979355e-01, 8.04837000e-01, 5.33589632e-01, 1.17714799e-02,\n",
+      "        6.32468457e-01],\n",
+      "       [8.34265005e-01, 1.48153239e-01, 4.76315704e-01, 3.80378357e-01,\n",
+      "        2.06803927e-01],\n",
+      "       [2.05973964e-01, 7.97800232e-01, 1.95564598e-01, 3.62444196e-01,\n",
+      "        1.84301650e-01],\n",
+      "       [2.24833762e-01, 3.20147307e-01, 8.64317164e-01, 2.81979839e-01,\n",
+      "        8.78127695e-01],\n",
+      "       [8.11213599e-01, 3.01834060e-02, 3.82650976e-01, 2.08357507e-01,\n",
+      "        2.31463086e-04],\n",
+      "       [6.24461287e-01, 7.73161720e-01, 1.50941085e-02, 3.03613616e-02,\n",
+      "        1.56002900e-01]]),\n",
+      " array([[0.88616524, 0.7304254 , 0.80366162, 0.19945496, 0.54520639]]),\n",
+      " array([[0.28973594, 0.82628746, 0.87517026, 0.55375394, 0.03607939,\n",
+      "        0.73094261, 0.36224307, 0.70308194],\n",
+      "       [0.56684793, 0.13472366, 0.22367494, 0.44511389, 0.14967295,\n",
+      "        0.31655747, 0.4056983 , 0.88230658],\n",
+      "       [0.70241026, 0.47607107, 0.07910366, 0.01302717, 0.94713648,\n",
+      "        0.32425888, 0.49464194, 0.06295981],\n",
+      "       [0.30415029, 0.94778111, 0.21339859, 0.81925867, 0.46675133,\n",
+      "        0.07891895, 0.68625631, 0.70596241],\n",
+      "       [0.66621354, 0.97821357, 0.91497712, 0.44545737, 0.15190352,\n",
+      "        0.18882302, 0.66192538, 0.27566867]]),\n",
+      " array([[0.60373411, 0.37450211, 0.63751926, 0.4894398 , 0.24020171,\n",
+      "        0.11431834, 0.44725273, 0.09000545]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pprint\n",
+    "\n",
+    "\n",
+    "#ニューラルネットワークを作る関数\n",
+    "def set_network(w1,b1,w2,b2,w3,b3):\n",
+    "    network = [w1,b1,w2,b2,w3,b3] #list\n",
+    "    return network\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "w1 = np.array([[0.1, 0.3, 0.5, 0.6, 0.7, 0.1, 0.2, 0.3], \n",
+    "               [0.2, 0.4, 0.6, 0.1, 0.3, 0.5, 0.6, 0.2], \n",
+    "               [0.3, 0.1, 0.2, 0.4, 0.2, 0.5, 0.1, 0.4]]) #3つのニューロンから、8つのニューロンに出力する際の重み\n",
+    "b1 = np.array([[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8,]]) #バイアスを8つのニューロンにたす\n",
+    "w2 = np.array([[0.1, 0.4, 0.5, 0.6, 0.7],\n",
+    "               [0.2, 0.5, 0.1, 0.8, 0.1],\n",
+    "               [0.3, 0.6, 0.2, 0.5, 0.2],\n",
+    "               [0.2, 0.5, 0.4, 0.2, 0.3],\n",
+    "               [0.3, 0.6, 0.7, 0.3, 0.2],\n",
+    "               [0.2, 0.5, 0.3, 0.2, 0.5],\n",
+    "               [0.3, 0.6, 0.1, 0.1, 0.1],\n",
+    "               [0.2, 0.5, 0.1, 0.1, 0.2]]) #8つのニューロンから5つのニューロンに出力する際の重み\n",
+    "b2 = np.array([[0.1, 0.2, 0.2, 0.4, 0.4]])#5つのニューロンにたすバイアス\n",
+    "w3 = np.array([[0.1, 0.3, 0.3, 0.3, 0.2, 0.1, 0.5, 0.1],\n",
+    "               [0.2, 0.2, 0.1, 0.2, 0.1, 0.4, 0.2, 0.4],\n",
+    "               [0.6, 0.6, 0.5, 0.5, 0.5, 0.5, 0.3, 0.7],\n",
+    "               [0.3, 0.4, 0.3, 0.4, 0.7, 0.3, 0.4, 0.7],\n",
+    "               [0.1, 0.1, 0.7, 0.1, 0.3, 0.2, 0.1, 0.2]]) #5つのニューロンから8つのニューロンに出力する際の重み\n",
+    "b3 = np.array([[0.3, 0.2, 0.2, 0.3, 0.7, 0.2, 0.1, 0.3]]) #バイアスを8つのニューロンにたす\n",
+    "\n",
+    "\n",
+    "Network = set_network(w1,b1,w2,b2,w3,b3)#初期ネットワーク作成\n",
+    "\n",
+    "pprint.pprint(Network)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "w1 = np.random.random([3,8])\n",
+    "b1 = np.random.random([1,8])\n",
+    "w2 = np.random.random([8,5])\n",
+    "b2 = np.random.random([1,5])\n",
+    "w3 = np.random.random([5,8])\n",
+    "b3 = np.random.random([1,8])\n",
+    "\n",
+    "Network = set_network(w1,b1,w2,b2,w3,b3)#初期ネットワーク作成\n",
+    "\n",
+    "print(\"--------------------------------------------------\")\n",
+    "pprint.pprint(Network)"
    ]
   }
  ],
