--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -29658,7 +29658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -29691,7 +29691,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\atusi\\AppData\\Local\\Temp\\ipykernel_29328\\1667402583.py:138: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "C:\\Users\\atusi\\AppData\\Local\\Temp\\ipykernel_16836\\2696146090.py:142: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  koubai_list = np.array([np.zeros_like(w1), np.zeros_like(b1), np.zeros_like(w2), np.zeros_like(b2), np.zeros_like(w3), np.zeros_like(b3)]) #なんでも配列のlistナノで、計算用の形でないので、np.arrayに\n"
      ]
     },
@@ -29783,16 +29783,22 @@
     "def forward(network, in_x):\n",
     "    W1, W2, W3 = np.array(network[0]), np.array(network[2]), np.array(network[4])\n",
     "    b1, b2, b3 = np.array(network[1]), np.array(network[3]), np.array(network[5])\n",
+    "    \n",
+    "    ####################\n",
+    "    # aはその層の入力の和のことです\n",
+    "    # bはバイアスのことです\n",
+    "    # zは出力です\n",
     "\n",
     "    a1 = np.dot(in_x, W1) + b1\n",
     "    z1 = relu(a1)\n",
     "    a2 = np.dot(z1, W2) + b2\n",
     "    z2 = relu(a2)\n",
     "    a3 = np.dot(z2, W3) + b3\n",
-    "    # print(a3)\n",
+    "    print(a1)\n",
+    "    print(in_x)\n",
     "    y = softmax (a3)\n",
     "\n",
-    "    return y #xを入力したnetworkで順伝播して得られた出力結果\n",
+    "    return y , W1, W2, W3, b1, b2, b3, #xを入力したnetworkで順伝播して得られた出力結果\n",
     "\n",
     "\n",
     "\n",
@@ -29967,9 +29973,336 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AEL = 3\n",
+    "B= np.array([[10,10,-20, 10],[-20,10,20,20],[5,2,2]])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([1, 2])\n",
+    "\n",
+    "b = np.array([4, 3])\n",
+    "\n",
+    "f = np.dot(a, b) # まずは２次元ベクトル同士の内積から。\n",
+    "print(f)\n",
+    "s = np.dot(a, a) # これでベクトルのノルムの２乗が出る。\n",
+    "print(s)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 誤差逆伝播するぞ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "out_y1=\n",
+      "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+      "(3, 8)\n",
+      "out_y2=\n",
+      "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+      "(3, 8)\n",
+      "in_x=\n",
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "(3, 3)\n",
+      "teach=\n",
+      "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+      "(3, 8)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\atusi\\AppData\\Local\\Temp\\ipykernel_16836\\1112939884.py:144: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  koubai_list = np.array([np.zeros_like(w1), np.zeros_like(b1), np.zeros_like(w2), np.zeros_like(b2), np.zeros_like(w3), np.zeros_like(b3)]) #なんでも配列のlistナノで、計算用の形でないので、np.arrayに\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence. The requested array would exceed the maximum number of dimension of 1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 167\u001b[0m\n\u001b[0;32m    164\u001b[0m Network1[param][gyou][retsu] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m h \u001b[39m#あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（リストw1の一つの要素だけに+hしてから、set_networkで作る？そんなきがする）\u001b[39;00m\n\u001b[0;32m    166\u001b[0m \u001b[39mfor\u001b[39;00m batch_out1 \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(BATCH_SIZE):\n\u001b[1;32m--> 167\u001b[0m     out_y1[batch_out1] \u001b[39m=\u001b[39m forward(Network1,in_x[batch_out1])\u001b[39m#そのNetworkで順伝播して出力を得る\u001b[39;00m\n\u001b[0;32m    168\u001b[0m     \u001b[39m# print(out_y1[batch_out1])\u001b[39;00m\n\u001b[0;32m    169\u001b[0m     lossbatch1 \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m sum_squared_error(out_y1[batch_out1],teach[batch_out1]) \u001b[39m#出力と教師データを比較し、誤差を計算する\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence. The requested array would exceed the maximum number of dimension of 1."
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pprint\n",
+    "# import matplotlib～の前に！\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "import japanize_matplotlib\n",
+    "np.random.seed(12)  # 再現性のために乱数シードを設定\n",
+    "\n",
+    "#ニューラルネットワークを作る関数\n",
+    "def set_network(w1,b1,w2,b2,w3,b3):\n",
+    "    network = [w1,b1,w2,b2,w3,b3] #listは中身何でもよし配列なので、arrayは数値の配列\n",
+    "    return network\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "def relu(x):\n",
+    "    return np.maximum(0, x)\n",
+    "\n",
+    "def identity_function(x):#恒等関数\n",
+    "    return x \n",
+    "\n",
+    "def softmax(a):\n",
+    "    c = np.max(a)\n",
+    "    exp_a = np.exp(a - c)#最大値で引くことで、オーバーフローを防ぐ\n",
+    "    sum_exp_a = np.sum(exp_a)\n",
+    "    y = exp_a /sum_exp_a\n",
+    "    return y\n",
+    "\n",
+    "\n",
+    "\n",
+    "def forward(network, in_x):\n",
+    "    W1, W2, W3 = np.array(network[0]), np.array(network[2]), np.array(network[4])\n",
+    "    b1, b2, b3 = np.array(network[1]), np.array(network[3]), np.array(network[5])\n",
+    "    \n",
+    "    ##############################\n",
+    "    # aはその層の入力の和のことです\n",
+    "    # bはバイアスのことです\n",
+    "    # zは出力です\n",
+    "    # wは重み\n",
+    "    ##############################\n",
+    "\n",
+    "    z1 = np.dot(in_x, W1) + b1\n",
+    "    a1 = relu(z1)\n",
+    "    z2 = np.dot(a1, W2) + b2\n",
+    "    a2 = relu(z2)\n",
+    "    z3 = np.dot(a2, W3) + b3\n",
+    "    y = softmax (z3)\n",
+    "\n",
+    "    return y, W1, W2, W3, b1, b2, b3, a1, a2, z1, z2, z3 #xを入力したnetworkで順伝播して得られた出力結果\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def sum_squared_error(y, t):#２乗和誤差\n",
+    "    return 0.5 * np.sum((y-t)**2)\n",
+    "\n",
+    "def bibun_numerical_gradient(out_y1, out_y2):\n",
+    "    return (out_y1 - out_y2)/(2*h)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def make_input():\n",
+    "    x0 = int(np.random.random()<0.5)\n",
+    "    x1 = int(np.random.random()<0.5)\n",
+    "    x2 = int(np.random.random()<0.5)\n",
+    "    teach = x2*4 + x1*2 + x0\n",
+    "    in_x  = np.array([x2,x1,x0])\n",
+    "    teach = np.array([int(teach==0),\n",
+    "                      int(teach==1),\n",
+    "                      int(teach==2),\n",
+    "                      int(teach==3),\n",
+    "                      int(teach==4),\n",
+    "                      int(teach==5),\n",
+    "                      int(teach==6),\n",
+    "                      int(teach==7)])\n",
+    "    return in_x, teach\n",
+    "\n",
+    "IN = 3\n",
+    "W1 = 4\n",
+    "W2 = 6\n",
+    "W3 = 8\n",
+    "# np.random.seed(49)  # 再現性のために乱数シードを設定\n",
+    "\n",
+    "#初期の重みとバイアスを記入\n",
+    "#3つのニューロンから、8つのニューロンに出力する際の重み\n",
+    "w1 = np.random.random([IN,W1])*1\n",
+    "#バイアスを8つのニューロンにたす\n",
+    "b1 = np.random.random([1,W1])*1\n",
+    " #8つのニューロンから5つのニューロンに出力する際の重み\n",
+    "w2 = np.random.random([W1,W2])*1\n",
+    "#5つのニューロンにたすバイアス\n",
+    "b2 = np.random.random([1,W2])*1\n",
+    " #5つのニューロンから8つのニューロンに出力する際の重み\n",
+    "w3 = np.random.random([W2,W3])*1\n",
+    "b3 = np.random.random([1,W3])*1\n",
+    "\n",
+    "\n",
+    "#微小量hを定義\n",
+    "h = 1e-4#0.0001\n",
+    "#学習率を定義\n",
+    "learning_rate = 0.8\n",
+    "#学習回数を定義\n",
+    "learn = 400\n",
+    "kaisuu = 0\n",
+    "#バッチサイズを設定\n",
+    "BATCH_SIZE = 3\n",
+    "\n",
+    "out_y1 = np.zeros(shape=(BATCH_SIZE,8))\n",
+    "print('out_y1=')\n",
+    "print(out_y1)\n",
+    "print(out_y1.shape)\n",
+    "out_y2 = np.zeros(shape=(BATCH_SIZE,8))\n",
+    "print('out_y2=')\n",
+    "print(out_y2)\n",
+    "print(out_y2.shape)\n",
+    "lossbatch1 = 0\n",
+    "# print(lossbatch1)\n",
+    "# print(lossbatch1.shape)\n",
+    "lossbatch2 = 0\n",
+    "# print(lossbatch2)\n",
+    "# print(lossbatch2.shape)\n",
+    "in_x = np.zeros(shape=(BATCH_SIZE,3))\n",
+    "print('in_x=')\n",
+    "print(in_x)\n",
+    "print(in_x.shape)\n",
+    "teach = np.zeros(shape=(BATCH_SIZE,8))\n",
+    "print('teach=')\n",
+    "print(teach)\n",
+    "print(teach.shape)\n",
+    "\n",
+    "\n",
+    "\n",
+    "Network = set_network(w1,b1,w2,b2,w3,b3)#初期ネットワーク作成\n",
+    "# in_x, teach = make_input()#入力データと教師信号作成\n",
+    "# out = forward(Network, in_x)#順伝播\n",
+    "# error = sum_squared_error(out,teach) #出力と教師を比較して誤差を計算\n",
+    "# koubai_list = [[[[0] * len()] * len(Network[])] * 1] * len(Network) # koubai_list = np.zeros_like(Network)#koubai_list = [[[]]] #np.zerosのほうがよさそうなので変えた\n",
+    "\n",
+    "# koubai_list = [np.zeros_like(w1), np.zeros_like(b1), np.zeros_like(w2), np.zeros_like(b2), np.zeros_like(w3), np.zeros_like(b3)] #なんでも配列のlistナノで、計算用の形でないので、np.arrayに\n",
+    "koubai_list = np.array([np.zeros_like(w1), np.zeros_like(b1), np.zeros_like(w2), np.zeros_like(b2), np.zeros_like(w3), np.zeros_like(b3)]) #なんでも配列のlistナノで、計算用の形でないので、np.arrayに\n",
+    "# koubai_list = np.array(koubai_list)\n",
+    "# print(\"firstnetwork\")\n",
+    "# pprint.pprint(Network)\n",
+    "\n",
+    "COUNT=[]\n",
+    "LOSS=[]\n",
+    "\n",
+    "#繰り返し処理\n",
+    "for i in range(learn):\n",
+    "    for batch_in in range(BATCH_SIZE):\n",
+    "\n",
+    "        in_x[batch_in], teach[batch_in] = make_input()#バッチサイズ分の入力データ作成してリストに収める\n",
+    "    \n",
+    "    for param in range(len(Network)): #パラメータの種類数だけ繰り返す\n",
+    "        for gyou in range(len(Network[param])): #w1的な感じつまり行数サイズ取得 network0番目の、行数を取得？\n",
+    "            for retsu in range(len(Network[param][gyou])): #列数サイズ取得\n",
+    "\n",
+    "                Network1 = Network.copy()\n",
+    "\n",
+    "                Network1[param][gyou][retsu] += h #あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（リストw1の一つの要素だけに+hしてから、set_networkで作る？そんなきがする）\n",
+    "                \n",
+    "                for batch_out1 in range(BATCH_SIZE):\n",
+    "                    out_y1[batch_out1] = forward(Network1,in_x[batch_out1])#そのNetworkで順伝播して出力を得る\n",
+    "                    # print(out_y1[batch_out1])\n",
+    "                    lossbatch1 += sum_squared_error(out_y1[batch_out1],teach[batch_out1]) #出力と教師データを比較し、誤差を計算する\n",
+    "                    loss1 = lossbatch1/BATCH_SIZE #ミニバッチ処理をするために誤差平均を計算\n",
+    "                lossbatch1 = 0\n",
+    "\n",
+    "                Network2 = Network.copy()\n",
+    "                Network2[param][gyou][retsu] -= h #あるひとつのパラメータだけちょっと減らしたNetworkを作る\n",
+    "                for batch_out2 in range(BATCH_SIZE):\n",
+    "                    out_y2[batch_out2] = forward(Network2,in_x[batch_out2])#そのNetworkで順伝播して出力を得る\n",
+    "                    lossbatch2 += sum_squared_error(out_y2[batch_out2],teach[batch_out2]) #出力と教師データを比較し、誤差を計算する\n",
+    "                    loss2 = lossbatch2/BATCH_SIZE #ミニバッチ処理をするために誤差平均を計算\n",
+    "                lossbatch2 = 0\n",
+    "\n",
+    "                koubai = bibun_numerical_gradient(loss1,loss2) #２つの誤差から、勾配を求める（損失関数の微分値が求まる）\n",
+    "                # print(\"koubai=\")\n",
+    "                # print(koubai)\n",
+    "\n",
+    "                koubai_list[param][gyou][retsu] = koubai #勾配情報をリストに保存する　これを繰り返すと、各パラメータの勾配のリストが完成する\n",
+    "        Network[param] -= koubai_list[param] * learning_rate # Network -= koubai_list * learning_rate #パラメータを更新\n",
+    "\n",
+    "    #作ったネットワークの性能検証（ただの順伝播をする）\n",
+    "    in_x_pre, teach_pre = make_input()\n",
+    "    out3 = forward(Network, in_x_pre)\n",
+    "    loss = sum_squared_error(out3,teach_pre)    \n",
+    "    COUNT.append(i)\n",
+    "    LOSS.append(loss)\n",
+    "    lossbatch1 = 0\n",
+    "    lossbatch2 = 0\n",
+    "\n",
+    "A = forward(Network,in_x_pre)\n",
+    "\n",
+    "print(\"------endnetwork-------\")\n",
+    "pprint.pprint(Network)\n",
+    "print(\"教師＝\" , teach)\n",
+    "print(\"入力＝\" , in_x)\n",
+    "# A = change_one_hot(A)\n",
+    "print(\"結果（確率）\" , np.round(A*100,1))\n",
+    "\n",
+    "plt.plot(COUNT, LOSS)\n",
+    "plt.title(\"2→10進数変換\", fontsize=23)\n",
+    "plt.xlabel('学習回数/count', fontname='MS Gothic', fontsize=18) #japanize-matplotlibを使用する\n",
+    "plt.ylabel('損失/loss', fontname='MS Gothic', fontsize=18) #japanize-matplotlibを使用する\n",
+    "plt.xlim(0, 250) # X軸の範囲を指定\n",
+    "plt.ylim(0, 0.9) # Y軸の範囲を指定\n",
+    "plt.xticks([0, 350, 500, 700]) # X軸の目盛りを指定\n",
+    "plt.yticks([0, 0.3, 0.6, 0.9]) # Y軸の目盛りを指定\n",
+    "\n",
+    "plt.tight_layout() #グラフがはみ出ないようにうまく調整してくれる\n",
+    "plt.grid()\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "Network1 = Network.copy()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
