--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -31056,7 +31056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31101,15 +31101,15 @@
     "    W1, W2, W3 = np.array(network[0]), np.array(network[2]), np.array(network[4])\n",
     "    b1, b2, b3 = np.array(network[1]), np.array(network[3]), np.array(network[5])\n",
     "\n",
-    "    fz1 = np.dot(in_x, W1) + b1\n",
-    "    z1 = sigmoid(fz1) #その層のすべてのニューロンの入力にシグモイド関数をかけて出力を作成する。\n",
-    "    fz2 = np.dot(z1, W2) + b2\n",
-    "    z2 = sigmoid(fz2)\n",
-    "    fz3 = np.dot(z2, W3) + b3\n",
+    "    z1 = np.dot(in_x, W1) + b1\n",
+    "    fz1 = sigmoid(z1) #その層のすべてのニューロンの入力にシグモイド関数をかけて出力を作成する。\n",
+    "    z2 = np.dot(fz1, W2) + b2\n",
+    "    fz2 = sigmoid(z2)\n",
+    "    z3 = np.dot(fz2, W3) + b3\n",
     "    # print(a3)\n",
-    "    y = sigmoid (fz3)\n",
+    "    fz3 = sigmoid (z3)\n",
     "\n",
-    "    return fz1, z1, fz2, z2, fz3, y #xを入力したnetworkで順伝播して得られた出力結果\n",
+    "    return z1, fz1, z2, fz2, z3, fz3 #xを入力したnetworkで順伝播して得られた出力結果\n",
     "\n",
     "# def softmax(a):\n",
     "#     c = np.max(a)\n",
@@ -31157,14 +31157,14 @@
     "pprint.pprint(b3)\n",
     "\n",
     "Network = set_network(w1,b1,w2,b2,w3,b3)\n",
-    "fz1, z1, fz2, z2, fz3, y = forward(Network, in_x)\n",
+    "z1, fz1, z2, fz2, z3, fz3 = forward(Network, in_x)\n",
     "print('----------------')\n",
-    "pprint.pprint(fz1)\n",
     "pprint.pprint(z1)\n",
-    "pprint.pprint(fz2)\n",
+    "pprint.pprint(fz1)\n",
     "pprint.pprint(z2)\n",
+    "pprint.pprint(fz2)\n",
+    "pprint.pprint(z3)\n",
     "pprint.pprint(fz3)\n",
-    "pprint.pprint(y)\n",
     "pprint.pprint(teach)\n",
     "\n"
    ]
