--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -31051,12 +31051,12 @@
    "metadata": {},
    "source": [
     "# 誤差逆伝播実験\n",
-    "## ①ネットワークの用意"
+    "## ①順伝播してネットワークを用意する"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31157,16 +31157,17 @@
     "pprint.pprint(b3)\n",
     "\n",
     "Network = set_network(w1,b1,w2,b2,w3,b3)\n",
-    "z1, fz1, z2, fz2, z3, fz3 = forward(Network, in_x)\n",
+    "z1, fz1, z2, fz2, z3, fz3_y = forward(Network, in_x)\n",
     "print('----------------')\n",
     "pprint.pprint(z1)\n",
     "pprint.pprint(fz1)\n",
     "pprint.pprint(z2)\n",
     "pprint.pprint(fz2)\n",
     "pprint.pprint(z3)\n",
-    "pprint.pprint(fz3)\n",
+    "pprint.pprint(fz3_y)\n",
     "pprint.pprint(teach)\n",
-    "\n"
+    "\n",
+    "grad_list=[]\n"
    ]
   },
   {
@@ -31198,14 +31199,47 @@
     "x[] #ネットワークへの入力値格納配列\n",
     "w[[[]]] #重みの値格納配列 \n",
     "z[[]] #ニューロンへの入力値格納配列\n",
-    "fz[[]] #入力値格納配列"
+    "fz[[]] #入力値格納配列\n",
+    "\n",
+    "def grad_sigmoidgrad():\n",
+    "    gradsigmoid\n",
+    "\n",
+    "def grad_get_keisuu():\n",
+    "    get_keisuu\n"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "#後ろから一層目の計算\n",
+    "aloss_aw311 = aloss_ay1 * ay1_az31 * az31_aw311\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (1,2) and (1,2) not aligned: 2 (dim 1) != 1 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#後ろから一層目の勾配を計算\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m grad_list[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mdot(fz3_y\u001b[39m-\u001b[39;49mteach, z3)\n",
+      "File \u001b[1;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mdot\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: shapes (1,2) and (1,2) not aligned: 2 (dim 1) != 1 (dim 0)"
+     ]
+    }
+   ],
+   "source": [
+    "#後ろから一層目の勾配を計算\n",
+    "grad_list[0] = np.dot(fz3_y - teach, z3)"
+   ]
   },
   {
    "cell_type": "code",
@@ -31387,6 +31421,97 @@
     "in_x = np.random.random([1,3])*1\n",
     "print(in_x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loss_derivative(Y, T):\n",
+    "    for retsu_size in range(len(fz3_y[0])):\n",
+    "        loss = Y[0][retsu_size] - T[0][retsu_size]\n",
+    "    return loss\n",
+    "# 出力と教師はともにただの列ベクトルだkara\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "def sigmoid_derivative(x):\n",
+    "    return (1 - sigmoid(x)) * sigmoid(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list1の長さは5です\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [['python', 'list'], ['length', 'two', ' demension']]\n",
+    "length = 0\n",
+    "\n",
+    "for x in list1:\n",
+    "    length += len(x)  #取り出した要素の長さを足していく\n",
+    "\n",
+    "print('list1の長さは{}です'.format(length))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
