--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -31432,7 +31432,7 @@
     "    for retsu_size in range(len(fz3_y[0])):\n",
     "        loss = Y[0][retsu_size] - T[0][retsu_size]\n",
     "    return loss\n",
-    "# 出力と教師はともにただの列ベクトルだkara\n",
+    "# 出力と教師はともにただの列ベクトルだkarannnnn\n",
     "\n",
     "def sigmoid(x):\n",
     "    return 1 / (1 + np.exp(-x))\n",
