--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -31092,7 +31092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31427,20 +31427,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ロードマップ●，▲，★，□, 💗\n",
+    "・まず💗（微分可否関数）を作成します\n",
+    "そのあと●，▲，★，□の関数を作ります．それぞれの中に💗の関数が入ります"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 💗微分可否関数\n",
+    "def check_grad_able():\n",
+    "    print(\"仮\")\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# ●マークのタイプの行列微分する関数\n",
-    "def grad_loss_and_y(x , y):\n",
-    "    pass\n",
+    "def grad_loss_and_y(Y, teach):\n",
+    "    for out in range(len(teach)): #出力の数つまり教師の数だけ(y-t)がでてくる\n",
+    "         Y[out] - teach[out]\n",
+    "         \n",
+    "    \n",
+    "\n",
+    "   for param in range(len(Network)): #パラメータの種類数だけ繰り返す　本来はlen(Network)的な感じになる　やり方わからなかった\n",
+    "        for gyou in range(len(Network[param])): #w1的な感じつまり行数サイズ取得 network0番目の、行数を取得？\n",
+    "            for retsu in range(len(Network[param][gyou])): #列数サイズ取得\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "# 3層目の勾配計算　は、つまりこうなります\n",
-    "\n"
+    "# 3層目の勾配計算　は、つまりこうなります\n"
    ]
   },
   {
