--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -30935,13 +30935,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2\n",
       "W_ALL=\n",
       "[array([[0.59865848, 0.15601864, 0.15599452],\n",
       "       [0.05808361, 0.86617615, 0.60111501],\n",
@@ -30957,13 +30958,13 @@
       " array([[0.45606998, 0.78517596, 0.19967378]]),\n",
       " array([[0.94888554, 0.96563203]])]\n",
       "z_ALL=\n",
-      "[array([[1.63019002, 1.10932813, 1.52170795]]),\n",
-      " array([[1.04875149, 1.4983768 , 1.39929464]]),\n",
-      " array([[1.50443221, 1.95307786]])]\n",
+      "[array([[0.79774738, 0.89698902, 1.33988298]]),\n",
+      " array([[0.54382447, 0.64815769, 1.08676429]]),\n",
+      " array([[0.48336924, 0.82237645]])]\n",
       "fz_ALL=\n",
-      "[array([[0.83619567, 0.75200383, 0.82078985]]),\n",
-      " array([[0.74053508, 0.81733226, 0.80207193]]),\n",
-      " array([[0.81823459, 0.87578186]])]\n"
+      "[array([[0.68949242, 0.71033035, 0.7924707 ]]),\n",
+      " array([[0.63270164, 0.65659518, 0.74777193]]),\n",
+      " array([[0.61854316, 0.69474056]])]\n"
      ]
     }
    ],
@@ -30979,12 +30980,12 @@
     "\n",
     "def forward(network, in_x):\n",
     "    W1, W2, W3 = np.array(network[0]), np.array(network[2]), np.array(network[4])\n",
-    "    b1, b2, b3 = np.array(network[1]), np.array(network[3]), np.array(network[5])\n",
-    "    z1 = np.dot(in_x, W1) + b1\n",
+    "    # b1, b2, b3 = np.array(network[1]), np.array(network[3]), np.array(network[5])\n",
+    "    z1 = np.dot(in_x, W1) #+ b1\n",
     "    fz1 = sigmoid(z1) #その層のすべてのニューロンの入力にシグモイド関数をかけて出力を作成する。\n",
-    "    z2 = np.dot(fz1, W2) + b2\n",
+    "    z2 = np.dot(fz1, W2) #+ b2\n",
     "    fz2 = sigmoid(z2)\n",
-    "    z3 = np.dot(fz2, W3) + b3\n",
+    "    z3 = np.dot(fz2, W3) #+ b3\n",
     "    fz3 = sigmoid (z3)\n",
     "    Z_ALL = [z1, z2, z3]\n",
     "    FZ_ALL = [fz1, fz2, fz3]\n",
@@ -31019,6 +31020,8 @@
     "b3 = np.random.random([1,W3])\n",
     "\n",
     "W_ALL = [w1,w2,w3]# 重みパラメータを保存\n",
+    "layer_num = len(W_ALL)-1\n",
+    "print(layer_num)\n",
     "# W_ALL.append(w1)\n",
     "# W_ALL.append(w2)\n",
     "# W_ALL.append(w3)\n",
@@ -31180,34 +31183,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\atusi\\AppData\\Local\\Temp\\ipykernel_21420\\2459697768.py:11: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  koubai_list = np.array([np.zeros_like(w1), np.zeros_like(b1), np.zeros_like(w2), np.zeros_like(b2), np.zeros_like(w3), np.zeros_like(b3)]) #なんでも配列のlistナノで、計算用の形でないので、np.arrayに\n",
-      "  0%|          | 0/2500 [00:00<?, ?it/s]C:\\Users\\atusi\\AppData\\Local\\Temp\\ipykernel_21420\\3417765191.py:50: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  return 0.5 * np.sum((y-t)**2)\n",
-      "  0%|          | 0/2500 [00:00<?, ?it/s]\n"
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([0.6567421 , 1.02219479, 0.75710953]),\n",
+      " array([0.53338643, 0.61339238, 1.04491542]),\n",
+      " array([0.48039421, 0.81563067])]\n",
+      "[array([0.65852817, 0.7353999 , 0.68072585]),\n",
+      " array([0.6302726 , 0.64871426, 0.73979733]),\n",
+      " array([0.61784096, 0.69330807])]\n",
+      "92\n",
+      "[array([0.63270164, 0.65659518, 0.74777193])]\n",
+      "[array([0.65852817, 0.7353999 , 0.68072585]),\n",
+      " array([0.6302726 , 0.64871426, 0.73979733]),\n",
+      " array([0.61784096, 0.69330807])]\n",
+      "[array([0.6567421 , 1.02219479, 0.75710953]),\n",
+      " array([0.53338643, 0.61339238, 1.04491542]),\n",
+      " array([0.48039421, 0.81563067])]\n",
+      "3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
      "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (3,) into shape (1,)",
+     "evalue": "shapes (1,3) and (2,3) not aligned: 3 (dim 1) != 2 (dim 0)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 30\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[39m# pprint.pprint(Network1)\u001b[39;00m\n\u001b[0;32m     29\u001b[0m out_y1 \u001b[39m=\u001b[39m forward(Network1,in_x)\u001b[39m#そのNetworkで順伝播して出力を得る\u001b[39;00m\n\u001b[1;32m---> 30\u001b[0m loss1 \u001b[39m=\u001b[39m sum_squared_error(out_y1,teach) \u001b[39m#出力と教師データを比較し、誤差を計算する\u001b[39;00m\n\u001b[0;32m     32\u001b[0m Network2 \u001b[39m=\u001b[39m Network\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m     33\u001b[0m Network2[param][gyou][retsu] \u001b[39m-\u001b[39m\u001b[39m=\u001b[39m h \u001b[39m#あるひとつのパラメータだけちょっと減らしたNetworkを作る\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[3], line 50\u001b[0m, in \u001b[0;36msum_squared_error\u001b[1;34m(y, t)\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msum_squared_error\u001b[39m(y, t):\u001b[39m#２乗和誤差\u001b[39;00m\n\u001b[1;32m---> 50\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39m0.5\u001b[39m \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39msum((y\u001b[39m-\u001b[39;49mt)\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (3,) into shape (1,)"
+      "Cell \u001b[1;32mIn[63], line 67\u001b[0m\n\u001b[0;32m     65\u001b[0m     koubai \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdot(koubai, triangle)\n\u001b[0;32m     66\u001b[0m     star \u001b[39m=\u001b[39m grad_z_and_fz(W_ALL,) \u001b[39m#★マークつまりi番目のｗの行列を返す\u001b[39;00m\n\u001b[1;32m---> 67\u001b[0m     koubai \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mdot(koubai, star)\n\u001b[0;32m     69\u001b[0m triangle \u001b[39m=\u001b[39m grad_fz_and_z(FZ, Z)\n\u001b[0;32m     70\u001b[0m koubai \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdot(koubai, triangle)\n",
+      "File \u001b[1;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mdot\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: shapes (1,3) and (2,3) not aligned: 3 (dim 1) != 2 (dim 0)"
      ]
     }
    ],
    "source": [
+    "from tqdm import trange\n",
+    "# ●マークのタイプの行列微分する関数\n",
+    "def grad_loss_and_y(teach, Y):\n",
+    "    circle = []\n",
+    "    for out in range(len(teach)): #出力の数つまり教師の数だけ(y-t)がでてくる\n",
+    "        Y[out] - teach[out]\n",
+    "        circle.append(Y[out] - teach[out])\n",
+    "        # circle = np.transpose(circle) #偏微分計算によって転置行列になった\n",
+    "        return circle\n",
+    "\n",
+    "\n",
+    "# ▲マークのタイプの行列微分する関数(シグモイドの微分が出る)\n",
+    "def grad_fz_and_z(layer_num, FZ, Z):\n",
+    "    triangle = np.zeros((len(FZ), len(Z)))\n",
+    "    pprint.pprint(FZ)\n",
+    "    pprint.pprint(Z)\n",
+    "    print(len(FZ))\n",
+    "    for gyou in range(len(FZ)):\n",
+    "        triangle[layer_num, gyou] = (1-sigmoid(FZ[layer_num][gyou]))*sigmoid(FZ[layer_num][gyou]) #配列をnp.zerosで作って，その要素を指定場所に代入する\n",
+    "        return triangle\n",
+    "\n",
+    "\n",
+    "# ★マークのタイプの行列微分する関数(重みWが出る)．ここでは全パターン出る\n",
+    "def grad_z_and_fz(W_ALL,):\n",
+    "    W = W_ALL[layer_num] #今考えている（見ている）重みの値のセットを取り出す（何層目の重み層か）\n",
+    "    star =  np.transpose(W) #偏微分処理を行ったため，転置行列にする\n",
+    "    return star\n",
+    "\n",
+    "\n",
+    "# □マークのタイプの行列微分をする関数（fzがでる）．一度にすべて出すのではなく，行ごとに計算して，最後にそれらを足したい　！！！！完成！！！！\n",
+    "def grad_z_and_w(layer_num, ):\n",
+    "    square = []\n",
+    "    for square_gyou in range(len(W_ALL[layer_num][0])): #今見てる重みの層の，0番目の長さつまり行数を取得　その数だけ繰り返す\n",
+    "        fzt = np.transpose(FZ_ALL[layer_num][square_gyou]) #指定の（今見てる）fzのn行目を転値したものを取り出す\n",
+    "        square.append(fzt)\n",
+    "    return square\n",
+    "\n",
+    "\n",
     "\n",
     "#微小量hを定義\n",
     "h = 1e-2#0.0001\n",
@@ -31216,60 +31281,101 @@
     "#学習回数を定義\n",
     "learn = 2500\n",
     "\n",
-    "\n",
     "Network = set_network(w1,b1,w2,b2,w3,b3)#初期ネットワーク作成\n",
     "in_x, teach = make_input()#入力データと教師信号作成\n",
-    "koubai_list = np.array([np.zeros_like(w1), np.zeros_like(b1), np.zeros_like(w2), np.zeros_like(b2), np.zeros_like(w3), np.zeros_like(b3)]) #なんでも配列のlistナノで、計算用の形でないので、np.arrayに\n",
     "\n",
     "COUNT=[]\n",
     "LOSS=[]\n",
     "\n",
     "#繰り返し処理\n",
-    "for i in trange(learn):\n",
-    "    in_x, teach = make_input()#入力データと教師信号作成\n",
+    "for i in trange (10): #適当 未定あとで\n",
+    "    Z, FZ = forward(Network, in_x) #順伝播\n",
+    "    pprint.pprint(Z)\n",
+    "    pprint.pprint(FZ)\n",
+    "\n",
+    "    # 逆伝播\n",
+    "    koubai = grad_loss_and_y(teach, fz_all[layer_num-1])#●マークつまりy-tの計算 teachどうしよう，yも場所指定がむずい\n",
+    "    print(\"92\")\n",
+    "    pprint.pprint(koubai)\n",
+    "    for i in range(layer_num, 0, -1):\n",
+    "        triangle = grad_fz_and_z(layer_num, FZ, Z) #▲マークつまりシグモイド微分にｚを入れた値が出る計算 現在の層の情報が必要なためlayer_numも引数にとる\n",
+    "        koubai = np.dot(koubai, triangle)\n",
+    "        star = grad_z_and_fz(W_ALL,) #★マークつまりi番目のｗの行列を返す\n",
+    "        koubai = np.dot(koubai, star)\n",
     "    \n",
-    "    for param in range(len(Network)): #パラメータの種類数だけ繰り返す　本来はlen(Network)的な感じになる　やり方わからなかった\n",
-    "        for gyou in range(len(Network[param])): #w1的な感じつまり行数サイズ取得 network0番目の、行数を取得？\n",
-    "            for retsu in range(len(Network[param][gyou])): #列数サイズ取得\n",
+    "    triangle = grad_fz_and_z(FZ, Z)\n",
+    "    koubai = np.dot(koubai, triangle)\n",
+    "    square = grad_z_and_w(layer_num, )\n",
+    "    koubai = np.dot(koubai, square)\n",
     "\n",
-    "                # Network1 = Network #コピーを作る\n",
-    "                Network1 = Network.copy()\n",
-    "                # print(Network1[param][gyou][retsu])\n",
-    "                Network1[param][gyou][retsu] += h #あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（リストw1の一つの要素だけに+hしてから、set_networkで作る？そんなきがする）\n",
-    "                # pprint.pprint(Network1)\n",
-    "                out_y1 = forward(Network1,in_x)#そのNetworkで順伝播して出力を得る\n",
-    "                loss1 = sum_squared_error(out_y1,teach) #出力と教師データを比較し、誤差を計算する\n",
+    "    print(koubai)\n",
+    "    W_ALL -= koubai*learning_rate\n",
+    "    \n",
+    "    \n",
+    "#学習後\n",
+    "print(W_ALL)\n",
     "\n",
-    "                Network2 = Network.copy()\n",
-    "                Network2[param][gyou][retsu] -= h #あるひとつのパラメータだけちょっと減らしたNetworkを作る\n",
-    "                out_y2 = forward(Network2,in_x)#そのNetworkで順伝播して出力を得る\n",
-    "                loss2 = sum_squared_error(out_y2,teach) #出力と教師データを比較し、誤差を計算する\n",
     "\n",
-    "                koubai = bibun_numerical_gradient(loss1,loss2) #２つの誤差から、勾配を求める（損失関数の微分値が求まる）\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array([ 0.2, -0.4,  0.6])\n",
+      "array([ 0.1,  0.5, -0.3])\n",
+      "[[0.24937604 0.         0.        ]\n",
+      " [0.         0.23500371 0.        ]\n",
+      " [0.         0.         0.24445831]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
     "\n",
-    "                koubai_list[param][gyou][retsu] = koubai #勾配情報をリストに保存する　これを繰り返すと、各パラメータの勾配のリストが完成する\n",
-    "        Network[param] -= koubai_list[param] * learning_rate # Network -= koubai_list * learning_rate #パラメータを更新\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
     "\n",
-    "    out3 = forward(Network, in_x)\n",
-    "    loss = sum_squared_error(out3,teach)    \n",
-    "    COUNT.append(i)\n",
-    "    LOSS.append(loss)\n",
+    "def grad_fz_and_z(FZ, Z):\n",
+    "    triangle = np.zeros((len(FZ), len(Z)))\n",
+    "    for gyou in range(len(FZ)):\n",
+    "        triangle[gyou, gyou] = (1 - sigmoid(FZ[gyou])) * sigmoid(FZ[gyou])\n",
+    "    return triangle\n",
     "\n",
-    "A = forward(Network,in_x)\n",
+    "# テストデータとしてFZとZを仮定\n",
+    "FZ = np.array([0.1, 0.5, -0.3])\n",
+    "Z = np.array([0.2, -0.4, 0.6])\n",
+    "pprint.pprint(Z)\n",
+    "pprint.pprint(FZ)\n",
     "\n",
-    "print(\"------end_learning_result_network・・・-------\")\n",
-    "pprint.pprint(Network)\n",
-    "print(\"------endnetwork-------\")\n",
-    "print(\"教師＝\" , teach)\n",
-    "print(\"入力＝\" , in_x)\n",
-    "# A = change_one_hot(A)\n",
-    "print(\"結果（確率）\" , np.round(A*100,1))\n",
-    "\n",
-    "plt.plot(COUNT, LOSS)\n",
-    "plt.xlabel(\"count\")\n",
-    "plt.ylabel(\"loss\")\n",
-    "plt.grid()\n",
-    "plt.show()"
+    "# grad_fz_and_z関数を呼び出してtriangleを計算\n",
+    "triangle = grad_fz_and_z(FZ, Z)\n",
+    "print(triangle)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "len(W_ALL)\n",
+    "a=np.zeros((2,3))\n",
+    "print(a[0,0])"
    ]
   },
   {
@@ -31314,7 +31420,6 @@
     "# ▲マークのタイプの行列微分する関数(シグモイドの微分が出る)\n",
     "def grad_fz_and_z(FZ, Z):\n",
     "    triangle = np.zeros(len(FZ), len(Z)) #ちゃんとサイズになっているはず　基本的にゼロがたくさんの行列ができるので，定義は[]ではなくnp.zerosにした\n",
-    "\n",
     "    for gyou in range(len(FZ)):\n",
     "            # for retsu in range(len(Z)): #ここ微妙　何回繰り返せばよいのか　いやgyou回繰り返せばいいだけだ！！\n",
     "                # if check_grad_able(FZ[gyou],Z[retsu]) == true  そもそも三角変換はいらない気がしてきた\n",
